k8s/templates/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackathon-video-management-ingress
  namespace: hackathon-video-management
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-modsecurity: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /videos(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hackathon-video-management
                port:
                  number: 80
